--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "^18.2.0",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
@@ -19,11 +20,14 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@types/google.maps": "^3.58.1",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "ngx-bootstrap": "^18.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "typeface-open-sans": "^1.1.13",
+    "typeface-rubik": "^1.1.13",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
